# a2fpga_core

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md
.claude/: settings.json
.claude/hooks/: guard-mcu-flash.py
.claude/skills/flash/: SKILL.md
.claude/skills/flash-mcu/: SKILL.md
.claude/skills/setup/: SKILL.md
boards/a2mega/: README.md  TODO.md  a2mega.gprj
boards/a2mega/docs/: A2FPGA_DDR3_Framebuffer_Refactor_Workplan.md  ESP32_ENHANCED_PORT.md  ESP32_OSPI_DESIGN.md  ddr3_framebuffer_480p_design.md  scan_timer_design.md  twgs_reference.md
boards/a2mega/hdl/: a2mega.cst  a2mega.sdc  datetime.svh  top.sv
boards/a2mega/impl/: a2mega_process_config.json
boards/a2n20v1/: README.md  TODO.md  a2n20v1.gprj
boards/a2n20v1/hdl/: a2n20v1.cst  top.sv
boards/a2n20v1/impl/: project_process_config.json
boards/a2n20v2/: README.md  a2n20v2.gprj
boards/a2n20v2-Enhanced/: README.md  TODO.md  a2n20v2_enhanced.gprj  a2n20v2_enhanced_dualrate.gprj  a2n20v2_enhanced_fb.gprj
boards/a2n20v2-Enhanced/docs/: UTHERNET2.md  UTHERNET2_PROTOCOL.md  disk_image_serving_design.md
boards/a2n20v2-Enhanced/hdl/: a2n20v2_enhanced.cst  (+6 more)
boards/a2n20v2-Enhanced/src/a2n20_bl616/firmware/: CMakeLists.txt  Makefile  cli.c  cli.h  diskio.c  ffconf.h  flash_prog_cfg.ini  flash_stage2_cfg.ini  fpga_screen.c  fpga_screen.h  fpga_sd.c  fpga_sd.h  fpga_spi.c  fpga_spi.h  gcr_dsk.h  io_cfg.h  jtag_process.c  jtag_process.h  main.c  proj.conf  sdmm.c  uart_interface.c  uart_interface.h  usb_config.h  usb_descriptor.c  usbd_ftdi.c  usbd_ftdi.h
boards/a2n20v2-Enhanced/src/a2n20_bl616/firmware_host/: CMakeLists.txt  FreeRTOSConfig.h  Makefile  boot_timeline.c  boot_timeline.h  disk.c  disk.h  diskio_host.c  diskio_host.h  flash_prog_cfg.ini  fpga_jtag.c  fpga_jtag.h  fpgaupdate.c  fpgaupdate.h  ftpd.c  ftpd.h  fwupdate.c  fwupdate.h  main.c  menu.c  menu.h  osd_console.c  osd_console.h  proj.conf  settings.c  settings.h  sscbridge.c  sscbridge.h  telnetd.c  telnetd.h  usb_config.h  usbh_hidinput.c  usbh_hidinput.h  usbh_xinput.c  usbh_xinput.h  w5100.c  w5100.h
boards/a2n20v2-Enhanced/src/a2n20_bl616/firmware_host/usb_net/: usbh_cdc_ecm.c  usbh_cdc_ecm.h
boards/a2n20v2-GS/: README.md  TODO.md  a2n20v2_gs.gprj  prebuild.tcl
boards/a2n20v2-SDRAM/: README.md  a2n20v2-SDRAM.gprj
boards/a2n9/: README.md  TODO.md  a2n9.gprj
boards/a2p25/: Makefile  README.md  TODO.md  a2p25.gprj
docs/: README.md  ROADMAP.md  architecture.md  audio.md  boards.md  bus-interface.md  conventions.md  coprocessor-interface.md  getting-started.md  gotchas.md  memory-system.md  memory_bandwidth_analysis.md  peripheral-cards.md  setup-gowin-cli.md  video-pipeline.md
docs/adr/: 0001-agents-md-as-router.md  README.md  template.md
hdl/bus/: a2bus_control_if.sv  a2bus_if.sv  a2bus_timing.sv  apple_bus.sv
hdl/cardrom/: cardrom.hex  cardrom.sv
hdl/ddr3/: ddr3_port_cdc.sv  ddr3_ports.sv
hdl/debug/: debugoverlay.sv
hdl/disk/: apple_disk.sv  diskii.hex  drive_ii.sv  drive_volume_if.sv  hdd.sv  hdd_rom.a65  hdd_rom.hex
hdl/f18a/: f18a.sv  f18a_color.vhd  f18a_core.vhd  f18a_counters.vhd  f18a_counters_fb.vhd  f18a_cpu.vhd  f18a_gpu.vhd  f18a_gpu_if.sv  f18a_single_port_ram.vhd  f18a_sprites.vhd  f18a_tile_linebuf_bsram.vhd  f18a_top.vhd  f18a_vga_cont_640_60.vhd  f18a_vga_cont_fb.vhd
hdl/hdmi/: audio_clock_regeneration_packet.sv  audio_sample_packet.sv  hdmi.sv  packet_picker.sv  serializer.sv
hdl/memory/: a2mem_if.sv  apple_memory.sv  apple_memory_sdram.sv  mem_if_cdc.sv  mem_if_mux.sv  mem_port_arb.sv  mem_port_bram.sv  mem_port_if.sv
hdl/mockingboard/: mockingboard.sv
hdl/picosoc/: firmware.hex  picosoc.sv
hdl/sdram/: mem_port_cdc.sv  sdram.sv  sdram_if_cdc.sv  sdram_if_mux.sv  sdram_port_if.sv  sdram_ports.sv
hdl/slots/: slot_if.sv  slotmaker.sv  slotmaker_config_if.sv  slots.hex
hdl/sound/: apple_speaker.sv  audio_out.v  audio_timing.sv  doc5503.sv  doc5503_register_ram.sv  i2s_receiver.sv  sound_glu.sv
hdl/ssc/: super_serial_card.sv
hdl/supersprite/: supersprite.sv
hdl/support/: TMS5220.vhd  YM2149.sv  bell.sv  cdc.sv  cdc_2ff.sv  cdc_denoise.sv  cdc_fifo.sv  cdc_sampling.sv  clock_enable_counter.sv  countdown.sv  debounce.sv  dual_set_reg.sv  falling_edge.sv  iir_filter.v  pulse_arbiter.v  pulse_crossing.v  pulse_generator.v  rising_edge.sv  sdpram32.sv  srff.v  sustained_high.sv  timer.sv  uart_6551.v  uart_rx.v  uart_tx.v  via6522.vhd  ws2812.sv  ws2812.v
hdl/uthernet2/: uthernet2.sv
hdl/video/: apple_video.sv  apple_video_gen.sv  direct_display.sv  f18a_gen.sv  framebuffer_480p.sv  framebuffer_writer.sv  pixel_stream_if.sv  scan_timer.sv  sdram_framebuffer.sv  vgc.sv  vgc_gen.sv  video.hex  video_control_if.sv
tools/: README.md  build.sh  flash.sh  gowin_cli_fix_macos.sh  gowin_eda_mac_fixer.sh
(+315 files in other folders)
